saas/k8s/003-data/060-nifi/60-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nifi
  namespace: data
  labels:
    app: nifi
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: nifi.data.davar.com
      http:
        paths:
          - backend:
              serviceName: nifi
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - nifi.data.davar.com
      secretName: data-production-tls
